2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* configure.in: Set the c preprocessor and
	executable extensions to work around problems
	that autoconf 2.13 has with VC++.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/makepane.tcl (sn_make): Fix build dialog
	so that it does not flash on screen when first
	mapped. The toplevel must be withdrawn and
	then mapped after idle calculations are done.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/dialog.tcl (tk_dialog_with_widgets): Fix
	fast create dialog so that it is centered properly.
	The call to update idletasks needs to happen
	before the req width and height are calculated.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/makepane.tcl (ExecMake): Pass only the Makefile
	name to the -f argument instead of passing a fully
	qualified path name. This should not change any
	functionality since the ExecMake command should
	cd to the proper directory first. Add some debug
	output and comments.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* bitmaps/clsbr_private.xpm: Add small empty
	image to represent a private class member.
	* gui/utilities.tcl: Define cls_br_private_image
	with date from clsbr_private.xpm.
	* hyper/services.c (class_browser_insert): Use
	cls_br_private_image as the image when a member
	with PAF_PRIVATE access is found. Check for
	PAF_PRIVATE explicitly instead of just assuming
	that a non-public and non-protected member is
	private.

2003-01-31  Earnie Boyd  <earnie@users.sf.net>

	* db/dbutils.c (Paf_Pipe_Flush): Use FlushFileBuffers
	for mingw32 host.

2003-01-29  Mo DeJong  <mdejong@uncounted.org>

	* INSTALL.TXT: Remove install file comment about
	needing bison and flex to build.
	* Makefile.am: Add flexgen and bisongen
	targets that can be used to regenerate
	.c file in the build dir. This should be
	run on a developers machine that has flex
	and bison installed.
	* Makefile.in: Regen.